[tool.poetry]
name = "app-python"
version = "0.1.0"
description = ""
authors = ["ttt.temaa <artem1005200776@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.8.0"
isort = "^5.13.2"
pep8 = "^1.7.1"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
